fix: scrollbar track colour in light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,20 +36,35 @@
   outline: none;
 }
 
+/* Custom scrollbar size */
 ::-webkit-scrollbar {
   width: 10px;
   height: 8px;
   padding: 2px;
 }
 
+/* Scrollbar colour  */
 ::-webkit-scrollbar-track {
+  background-color: #fafafa;
+}
+
+html.dark ::-webkit-scrollbar-track {
   background-color: rgb(31, 41, 55);
 }
 
+/* Scrollbar thumb colour */
 ::-webkit-scrollbar-thumb {
   background-color: royalblue;
   border-radius: 2px;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out !important;
+}
+
+html.dark ::-webkit-scrollbar-thumb {
+  background-color: royalblue;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(225, 72.73%, 62%) !important;
 }
 
 html.dark .react-loading-skeleton {
